@@ -1,5 +1,6 @@
 #  File src/library/utils/R/RShowDoc.R
 #  Part of the R package, http://www.R-project.org
+#  Modifications for pqR Copyright (c) 2013 Radford M. Neal.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -98,7 +99,7 @@ RShowDoc <- function(what, type=c("pdf", "html", "txt"), package)
         writeLines(tmp, tf)
         file.show(tf, delete.file = TRUE, encoding = "UTF-8")
         return(invisible(path))
-    } else if(what == "COPYING") {
+    } else if(what %in% c("COPYING","ONEWS","OONEWS","OOONEWS","MODS")) {
         path <- file.path(R.home(), what)
         file.show(path)
         return(invisible(path))
