@@ -1,5 +1,6 @@
 #  File src/library/utils/R/Rprof.R
 #  Part of the R package, http://www.R-project.org
+#  Modifications for pqR Copyright (c) 2013 Radford M. Neal.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -21,8 +22,20 @@ Rprof <- function(filename = "Rprof.out", append = FALSE, interval =  0.02,
     invisible(.Internal(Rprof(filename, append, interval, memory.profiling)))
 }
 
-Rprofmem <- function(filename = "Rprofmem.out", append = FALSE, threshold = 0)
+# Enhanced Rprofmem for pqR.  Rprofmemt has different defaults.
+
+Rprofmem <- function(filename = "Rprofmem.out", append = FALSE, threshold = 0,
+             nelem = 0, stack=TRUE, terminal = FALSE, pages = TRUE, details = FALSE)
 {
     if(is.null(filename)) filename <- ""
-    invisible(.Internal(Rprofmem(filename, append, as.double(threshold))))
+    invisible(.Internal(Rprofmem(filename, append, as.double(threshold), 
+                                 as.double(nelem), stack, terminal, pages, details)))
+}
+
+Rprofmemt <- function(filename = "", append = FALSE, threshold = 0,
+             nelem = 0, stack=TRUE, terminal = TRUE, pages = FALSE, details = TRUE)
+{
+    if(is.null(filename)) { filename <- ""; terminal <- FALSE }
+    invisible(.Internal(Rprofmem(filename, append, as.double(threshold), 
+                                 as.double(nelem), stack, terminal, pages, details)))
 }
